--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <div id="question">Quer namorar comigo?</div>
+    <div id="question">Sairia comigo?</div>
     <div id="options">
         <button onclick="showCustomDialog('Eu te amo meu amor S2')">Sim</button>
         <button id="noBtn" onmouseover="moveButton()">Não</button>
