--- a/main.html
+++ b/main.html
@@ -43,9 +43,9 @@
     </style>
 </head>
 <body>
-    <div id="question">Quer namorar comigo?</div>
+    <div id="question">Me daria a honra de sair contigo?</div>
     <div id="options">
-        <button onclick="showCustomDialog('Eu te amo meu amor S2')">Sim</button>
+        <button onclick="showCustomDialog(ja que sim escolhe o lugar e quando?)">Sim</button>
         <button id="noBtn" onmouseover="moveButton()">Não</button>
     </div>
     <script>
