--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 <body>
     <div id="question">Me daria a honra de sair contigo?</div>
     <div id="options">
-        <button onclick="showCustomDialog(ja que sim escolhe o lugar e quando?)">Sim</button>
+        <button onclick="showCustomDialog('ja que sim escolhe o lugar e quando?')">Sim</button>
         <button id="noBtn" onmouseover="moveButton()">Não</button>
     </div>
     <script>
