--- a/main.html
+++ b/main.html
@@ -43,9 +43,9 @@
     </style>
 </head>
 <body>
-    <div id="question">Me daria a honra de sair contigo?</div>
+    <div id="question">topa ir num role comigo?</div>
     <div id="options">
-        <button onclick="showCustomDialog('ja que sim escolhe o lugar e quando?')">Sim</button>
+        <button onclick="showCustomDialog('obrigado por pensar em me conceder tal honra rs')">Sim</button>
         <button id="noBtn" onmouseover="moveButton()">Não</button>
     </div>
     <script>
